--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <img src="./resources/printing.jpg" alt="error" />
                     <div class="img-content">
                         <!-- <h3>Printing</h3> -->
-                        <a href="https://en.wikipedia.org/wiki/Vegetable" class="btn btn-primary" target="blank">Printing</a>
+                        <a href="" class="btn btn-primary" target="blank">Printing</a>
                     </div>
                 </div>
             </div>
@@ -90,7 +90,7 @@
                   <img src="./resources/beverages.jpg" alt="error" />
                   <div class="img-content">
                       <!-- <h3>Beverages</h3> -->
-                      <a href="https://en.wikipedia.org/wiki/Vegetable" class="btn btn-primary" target="blank">Beverages</a>
+                      <a href="" class="btn btn-primary" target="blank">Beverages</a>
                   </div>
               </div>
           </div>
@@ -99,7 +99,7 @@
                 <img src="./resources/icecreame.jpg" alt="error" />
                 <div class="img-content">
                     <!-- <h3>Ice Creame</h3> -->
-                    <a href="https://en.wikipedia.org/wiki/Vegetable" class="btn btn-primary" target="blank">Ice Creame</a>
+                    <a href="" class="btn btn-primary" target="blank">Ice Creame</a>
                 </div>
             </div>
         </div>
