--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li><a href="#food">Services</a></li>
                 <li><a href="#food-menu">Menu</a></li>
                 
-                <li><a href="#contact">Loctation</a></li>
+                <li><a href="#location">Location</a></li>
             </ul>
             <!-- <h1 class="logo">Canteen Website</h1> -->
         </div>
@@ -529,24 +529,15 @@
       </div>
   </div>
 </section>
+   <div id="location">
+  
+  <p>We are located in  Phase 3 Building, on the first floor, next to the library.</p>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3684.078405559549!2d88.42484061495963!3d22.576170685180898!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a02751a9d9c9e85%3A0x7fe665c781b10383!2sTechno%20Main%20Salt%20Lake!5e0!3m2!1sen!2sin!4v1680351065741!5m2!1sen!2sin" width="350" height="280" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
    
-    <section id="contact">
-        <div class="contact-container container">
-            <div class="contact-img">
-                <img src="https://i.postimg.cc/1XvYM67V/restraunt2.jpg" alt="" />
-            </div>
-
-            <div class="form-container">
-                <h2>Contact Us</h2>
-                <input type="text" placeholder="Your Name" />
-                <input type="email" placeholder="E-Mail" />
-                <textarea cols="30" rows="6" placeholder="Type Your Message"></textarea>
-                <a href="#" class="btn btn-primary">Submit</a>
-            </div>
-        </div>
-    </section>
+    
     <footer id="footer">
-        <h2>Restraunt &copy; all rights reserved</h2>
+        <h2>Canteen &copy; all rights reserved</h2>
     </footer>
     <!-- .................../ JS Code for smooth scrolling /...................... -->
 
