--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="about-wrapper container">
             <div class="about-text">
                 <p class="small">About Us</p>
-                <h2>We've beem making healthy food last for 10 years</h2>
+                <h2>We've beem making healthy food last for Several years</h2>
                 <p>
                   The college canteen is more than just a place to grab a quick bite to eat between classes. It is a vibrant hub of activity where students come together to share a meal, catch up with friends, and recharge their batteries for the rest of the day.Students who have a busy schedule and do not have the time to go to different places to buy their stationery and food. Our canteen provide a unique service to students and make a significant contribution to the educational community.The aroma of delicious food wafts through the air, tempting even the most studious of students to take a break and indulge in some culinary delights.
                 </p>
