--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="./resources/headlogo.png" />
+    <link rel="icon" href="./resources/college-logo.jpeg" />
 </head>
 
 <body>
@@ -22,7 +22,7 @@
                 <span class="line line3"></span>
             </div>
             <ul class="menu-items">
-              <li>    <a href="https://www.ticollege.ac.in/"><img src="./resources/collog.png" width="120" height="30"></a></li>
+              <li>    <a href="https://www.ticollege.ac.in/"><img src="./resources/college-logo.jpeg" width="120" height="30"></a></li>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#food">Services</a></li>
@@ -53,7 +53,7 @@
                 </p>
             </div>
             <div class="about-img">
-                <img src="./resources/tmslfood.png" alt="food" />
+                <img src="./resources/college-logo.jpeg" alt="food" />
             </div>
         </div>
     </section>
