--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <span class="line line3"></span>
             </div>
             <ul class="menu-items">
-              <li>    <a href="https://www.ticollege.ac.in/"><img src="./resources/college-logo.jpeg" width="120" height="30"></a></li>
+              <li>    <img src="./resources/college-logo.jpeg" width="120" height="30"></a></li>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#food">Services</a></li>
@@ -500,7 +500,7 @@
     
   <p>We are located in  Phase 3 Building, on the first floor, next to the library.</p>
   
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3684.078405559549!2d88.42484061495963!3d22.576170685180898!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a02751a9d9c9e85%3A0x7fe665c781b10383!2sTechno%20Main%20Salt%20Lake!5e0!3m2!1sen!2sin!4v1680351065741!5m2!1sen!2sin" width="350" height="280" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d235850.81212011125!2d88.18254112599966!3d22.535343439863773!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f882db4908f667%3A0x43e330e68f6c2cbc!2sKolkata%2C%20West%20Bengal!5e0!3m2!1sen!2sin!4v1703656672557!5m2!1sen!2sin" width="350" height="280" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
     <footer id="footer">
         <h2>Canteen &copy; all rights reserved</h2>
