--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d235850.81212011125!2d88.18254112599966!3d22.535343439863773!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f882db4908f667%3A0x43e330e68f6c2cbc!2sKolkata%2C%20West%20Bengal!5e0!3m2!1sen!2sin!4v1703656672557!5m2!1sen!2sin" width="350" height="280" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
     <footer id="footer">
-        <h2>Canteen &copy; all rights reserved</h2>
+        <h2>Shinjan &copy; all rights reserved</h2>
     </footer>
     <!-- .................../ JS Code for smooth scrolling /...................... -->
 
