fixed the location issue
Added some CSS in the location section to make it more align

--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
 </div>
    
 <div id="location">
-    <h2 class="food-menu-heading"><u>Loctation</h2>
+    <h2 class="food-menu-heading"><u>Location</h2>
     
   <p>We are located in  Phase 3 Building, on the first floor, next to the library.</p>
   
