--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
 </div>
 
 <div class="cart">
-    <a href="/cart.html" class="btn btn-primary" style="margin-left: 42.8%; font-size: x-large;">ORDER NOW</a>
+    <a href="/cart.html" class="btn btn-primary" style="margin-left: 42.8%; font-size: x-large; font-weight: 600;"> ORDER NOW </a>
 </div>
  <br>  
 <div id="location">
