--- a/cart.html
+++ b/cart.html
@@ -51,29 +51,7 @@
     <link rel="stylesheet" href="./cart.css" />
   </head>
 
-  <body>
-
-
-    <nav class="navbar">
-        <div class="navbar-container container">
-            <input type="checkbox" name="" id="">
-            <div class="hamburger-lines">
-                <span class="line line1"></span>
-                <span class="line line2"></span>
-                <span class="line line3"></span>
-            </div>
-            <ul class="menu-items">
-              <li>    <img src="./resources/college-logo.jpeg" width="120" height="30"></a></li>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#food">Services</a></li>
-                <li><a href="#food-menu">Menu</a></li>
-                
-                <li><a href="#location">Location</a></li>
-            </ul>
-
-        </div>
-    </nav>
+<body>
 
 
 <!-- Category section starts here -->
@@ -83,7 +61,7 @@
           <span><b>CATEGORIES</b></span><hr>
         </h1><br><br>
         <div class="row gutters-40">
-          <div class="col-lg-4 col-sm-4 col-4">
+          <div class="col-lg-4  col-sm-4 col-xs-4">
             <div class="product-box-layout4 momos">
               <div class="item-figure">
                 <img
@@ -99,7 +77,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-sm-4 col-4">
+          <div class="col-lg-4 col-sm-4 col-xs-4">
             <div class="product-box-layout4 chinese">
               <div class="item-figure">
                 <img
@@ -115,7 +93,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-sm-4 col-4">
+          <div class="col-lg-4 col-sm-4 col-xs-4">
             <div class="product-box-layout4 beverages">
               <div class="item-figure">
                 <img
@@ -229,7 +207,7 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-sm-6 col-12">
+              <div class="col-sm-6 col-12 ">
                 <div class="card">
                   <h2 class="card-title">Dishes </h2><br>
                   <div class="card-body">
@@ -460,7 +438,7 @@
               </div>
 
               <div class="col-sm-6 col-12">
-                <div class="card">
+                <div class="card" >
                   <h2 class="card-title">Ice Creame</h2><br>
                   <div class="card-body">
                     <div class="row foodItem">
