--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </p>
             </div>
             <div class="about-img">
-                <img src="./resources/college-logo.jpeg" alt="food" />
+                <img src="./resources/canteen image.jpg" alt="food" />
             </div>
         </div>
     </section>
