--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <span class="line line3"></span>
             </div>
             <ul class="menu-items">
-                <li><img src="./resources/college-logo.jpeg" width="120" height="30"></a></li>
+              <img src="./resources/Yellow Abstract Cooking Fire Free Logo.png">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#food">Services</a></li>
