--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                 <li><a href="#food-menu">Menu</a></li>
 
                 <li><a href="#location">Location</a></li>
+                <div>
+                    <img src="moon-icon.png" alt="" id="icon">
+                </div>
             </ul>
 
         </div>
@@ -426,7 +429,7 @@
                     <img src="./resources/caramel.jpeg" alt="" />
 
                     <div class="food-description">
-                        <h2 class="food-titile">Salted Caramel Brownie</h2>
+                        <h2 class="food-titile" id="salted">Salted Caramel Brownie</h2>
 
                         <p class="food-price">Price: &#8377; 10</p>
                         <hr>
@@ -503,7 +506,7 @@
                     <img src="./resources/pencil.jpeg" alt="" />
 
                     <div class="food-description">
-                        <h2 class="food-titile">Pencil/Sharpner/Rubber</h2>
+                        <h2 class="food-titile" id="pencil">Pencil/Sharpner/Rubber</h2>
 
                         <p class="food-price">Price: &#8377; 10</p>
                         <hr>
@@ -518,7 +521,7 @@
     <div id="location">
         <h2 class="food-menu-heading"><u>Location</h2>
 
-        <p>We are located in Phase 3 Building, on the first floor, next to the library.</p>
+        <p id="para">We are located in Phase 3 Building, on the first floor, next to the library.</p>
 
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d235850.81212011125!2d88.18254112599966!3d22.535343439863773!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f882db4908f667%3A0x43e330e68f6c2cbc!2sKolkata%2C%20West%20Bengal!5e0!3m2!1sen!2sin!4v1703656672557!5m2!1sen!2sin"
@@ -573,6 +576,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="Carousel.js"></script>
     <script src="app.js"></script>
+    <script src="script.js"></script>
 
 </html>
 
