--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <ul class="menu-items">
               <img src="./resources/Yellow Abstract Cooking Fire Free Logo.png">
-                <li><a href="#home">Home</a></li>
+                <li><a href="#home">Saptarshi</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#food">Services</a></li>
                 <li><a href="#food-menu">Menu</a></li>
