--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
 
                         <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
                         <div class="footer-logo">
-                            <img src="./resources/college-logo.jpeg" alt="College Logo" width="120" height="100">
+                            <img src="./resources/Yellow Abstract Cooking Fire Free Logo.png" alt="College Logo" width="120" height="100" >
                         </div>
                     </ul>
 
