#22 Created light and dark mode button

--- a/cart.html
+++ b/cart.html
@@ -52,7 +52,9 @@
   </head>
 
 <body>
-
+  <div>
+    <img src="moon-icon.png" alt="" id="icon">
+</div>
 
 <!-- Category section starts here -->
     <section id="categorySection">
