--- a/cart.html
+++ b/cart.html
@@ -210,7 +210,7 @@
             </div>
             <div class="row">
               <div class="col-sm-6 col-12 ">
-                <div class="card">
+                <div class="card" id="card1">
                   <h2 class="card-title">Dishes </h2><br>
                   <div class="card-body">
                     <div class="row foodItem">
@@ -440,7 +440,7 @@
               </div>
 
               <div class="col-sm-6 col-12">
-                <div class="card" >
+                <div class="card" id="card2">
                   <h2 class="card-title">Ice Creame</h2><br>
                   <div class="card-body">
                     <div class="row foodItem">
