Kept the light/dark mode button at right position

--- a/index.html
+++ b/index.html
@@ -23,18 +23,16 @@
                 <span class="line line3"></span>
             </div>
             <ul class="menu-items">
-              <img src="./resources/Yellow Abstract Cooking Fire Free Logo.png">
+                <img src="./resources/Yellow Abstract Cooking Fire Free Logo.png">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#food">Services</a></li>
                 <li><a href="#food-menu">Menu</a></li>
-
                 <li><a href="#location">Location</a></li>
-                <div>
-                    <img src="moon-icon.png" alt="" id="icon">
-                </div>
             </ul>
-
+        </div>
+        <div class="light_dark">
+            <img src="moon-icon.png" alt="" id="icon">
         </div>
     </nav>
     <section class="showcase-area" id="showcase">
@@ -513,8 +511,10 @@
             </div>
         </section>
     </div>
-<div class="cart">
-    <a href="./cart.html" class="btn btn-primary" style="margin-left: 42%; font-size: x-large; font-weight: 600;">Order Online</a></div><br><br>
+    <div class="cart">
+        <a href="./cart.html" class="btn btn-primary"
+            style="margin-left: 42%; font-size: x-large; font-weight: 600;">Order Online</a>
+    </div><br><br>
 
     <div id="location">
         <h2 class="food-menu-heading"><u id="locate">Location</h2>
@@ -556,7 +556,8 @@
 
                         <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
                         <div class="footer-logo">
-                            <img src="./resources/Yellow Abstract Cooking Fire Free Logo.png" alt="College Logo" width="120" height="100">
+                            <img src="./resources/Yellow Abstract Cooking Fire Free Logo.png" alt="College Logo"
+                                width="120" height="100">
                         </div>
                     </ul>
 
