--- a/index.html
+++ b/index.html
@@ -517,6 +517,7 @@
     <a href="./cart.html" class="btn btn-primary" style="margin-left: 42%; font-size: x-large; font-weight: 600;">Order Online</a></div><br><br>
 
     <div id="location">
+        <div class="location-map">
         <h2 class="food-menu-heading"><u id="locate">Location</h2>
 
         <p id="para">We are located in Phase 3 Building, on the first floor, next to the library.</p>
@@ -525,6 +526,15 @@
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d235850.81212011125!2d88.18254112599966!3d22.535343439863773!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f882db4908f667%3A0x43e330e68f6c2cbc!2sKolkata%2C%20West%20Bengal!5e0!3m2!1sen!2sin!4v1703656672557!5m2!1sen!2sin"
             width="350" height="280" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="location-contact">
+            <form action="https://formsubmit.co/shinjansaha02@gmail.com" method="POST">
+            <input type="text" class="name" placeholder="Your Name">
+            <input type="number"  class="number" placeholder="Your Number">
+            <input type="text" class="email" placeholder="Your email">
+            <textarea class="doubt" rows="5" placeholder="Ask any question"></textarea>
+            <button class="submit" >Submit</button>
+        </div>
     </div>
 
     <footer id="footer">
