--- a/cart.html
+++ b/cart.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <title>CANTEEN</title>
+    <link rel="icon" href="./resources/Yellow Abstract Cooking Fire Free Logo.png" />
 
-<head>
-  <title>CANTEEN</title>
-  <link rel="icon" href="./resources/college-logo.jpeg" />
-
-  <!-- META -->
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="Momomia"
-    content="Author: Rishika Garg, Illustrator: Font Awesome and Flat Icon, Category: Food Application, Open Source: Yes" />
-  <meta name="description" content="Food Ordering Website. The 'MOMOMIA' has
+    <!-- META -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta
+      name="Momomia"
+      content="Author: Rishika Garg, Illustrator: Font Awesome and Flat Icon, Category: Food Application, Open Source: Yes"
+    />
+    <meta name="description" content="Food Ordering Website. The 'MOMOMIA' has
     been practiced to override the prevalent problems in manual systems. This
     website is compatible to finalize and, in some cases, reduces the
     difficulties faced by this existing system.>
