--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" href="./resources/college-logo.jpeg" />
+    <link rel="icon" href="./resources/Yellow Abstract Cooking Fire Free Logo.png" />
 </head>
 
 <body>
