Closed the form

--- a/index.html
+++ b/index.html
@@ -534,6 +534,7 @@
             <input type="text" class="email" placeholder="Your email">
             <textarea class="doubt" rows="5" placeholder="Ask any question"></textarea>
             <button class="submit" >Submit</button>
+            </form>
         </div>
     </div>
 
