--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
     <nav class="navbar">
-        <div class="navbar-container container">
+        <div class="navbar-container">
             <input type="checkbox" name="" id="">
             <div class="hamburger-lines">
                 <span class="line line1"></span>
