--- a/cart.html
+++ b/cart.html
@@ -43,6 +43,8 @@
   <!-- CSS -->
   <link href="https://copyfonts.com/fonts/attari-salees.html" />
   <link rel="stylesheet" href="./cart.css" />
+  <!-- Option 1: Include in HTML -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 </head>
 
 <body>
@@ -59,11 +61,26 @@
       </div>
       <ul class="menu-items">
         <img src="./resources/Yellow Abstract Cooking Fire Free Logo.png">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#food">Services</a></li>
-        <li><a href="#food-menu">Menu</a></li>
-        <li><a href="#location">Location</a></li>
+        <li>
+          <i class="bi bi-house-door"></i>
+          <a href="index.html" class="text">Home</a>
+        </li>
+        <li>
+          <i class="bi bi-ui-checks-grid"></i>
+          <a href="#categories" class="text">Categories</a>
+        </li>
+        <li>
+          <i class="bi bi-card-list"></i>
+          <a href="#items" class="text">Items</a>
+        </li>
+        <li>
+          <i class="bi bi-cart"></i>
+          <a href="#cart" class="text">Cart</a>
+        </li>
+        <li>
+          <i class="bi bi-geo-alt-fill"></i>
+          <a href="#location" class="text">Location</a>
+        </li>
       </ul>
     </div>
     <div class="light_dark">
@@ -74,7 +91,7 @@
   <section id="categorySection">
     <div class="container">
       <h1><br>
-        <span><b>CATEGORIES</b></span>
+        <span><b id="categories">CATEGORIES</b></span>
         <hr>
       </h1><br><br>
       <div class="row gutters-40">
@@ -177,7 +194,7 @@
         <div id="momos">
           <div class="row menuHeading">
             <div class="col-12">
-              <h1>Items</h1>
+              <h1 id="items">Items</h1>
               <hr>
             </div>
           </div>
@@ -515,9 +532,9 @@
             </div>
           </div>
           <br><br>
-          <div class="row checkOutRow">
-            <button type="button" class="btn knowMoreBtn" data-toggle="modal" data-target="#exampleModal">
-              <i class="fas fa-shopping-cart"></i> Go to Cart
+          <div class="row checkOutRow" id="cart">
+            <button type="button" class="btn knowMoreBtn" data-toggle="modal" data-target="#exampleModal" >
+              <i class="fas fa-shopping-cart" ></i> Go to Cart
             </button>
           </div>
         </div>
