Done the changes

--- a/cart.html
+++ b/cart.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <title>CANTEEN</title>
-    <link rel="icon" href="./resources/Yellow Abstract Cooking Fire Free Logo.png" />
 
-    <!-- META -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta
-      name="Momomia"
-      content="Author: Rishika Garg, Illustrator: Font Awesome and Flat Icon, Category: Food Application, Open Source: Yes"
-    />
-    <meta name="description" content="Food Ordering Website. The 'MOMOMIA' has
+<head>
+  <title>CANTEEN</title>
+  <link rel="icon" href="./resources/Yellow Abstract Cooking Fire Free Logo.png" />
+
+  <!-- META -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="Momomia"
+    content="Author: Rishika Garg, Illustrator: Font Awesome and Flat Icon, Category: Food Application, Open Source: Yes" />
+  <meta name="description" content="Food Ordering Website. The 'MOMOMIA' has
     been practiced to override the prevalent problems in manual systems. This
     website is compatible to finalize and, in some cases, reduces the
     difficulties faced by this existing system.>
@@ -44,7 +40,7 @@
   <link href="https://copyfonts.com/fonts/attari-salees.html" />
   <link rel="stylesheet" href="./cart.css" />
   <!-- Option 1: Include in HTML -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+
 </head>
 
 <body>
@@ -61,24 +57,28 @@
       </div>
       <ul class="menu-items">
         <img src="./resources/Yellow Abstract Cooking Fire Free Logo.png">
+
         <li>
-          <i class="bi bi-house-door"></i>
           <a href="index.html" class="text">Home</a>
         </li>
+
         <li>
-          <i class="bi bi-ui-checks-grid"></i>
+          <a href="#about" class="text">About</a>
+        </li>
+
+        <li>
           <a href="#categories" class="text">Categories</a>
         </li>
+
         <li>
-          <i class="bi bi-card-list"></i>
           <a href="#items" class="text">Items</a>
         </li>
+
         <li>
-          <i class="bi bi-cart"></i>
           <a href="#cart" class="text">Cart</a>
         </li>
+
         <li>
-          <i class="bi bi-geo-alt-fill"></i>
           <a href="#location" class="text">Location</a>
         </li>
       </ul>
@@ -87,6 +87,26 @@
       <img src="moon-icon.png" alt="" id="icon">
     </div>
   </nav>
+
+  <div id="abtus">
+    <div class="aboutus">
+      <h1><br>
+        <span><b id="about">ABOUT</b></span>
+        <hr>
+      </h1><br><br>
+      <div class="abt_text">
+        <img src="cart_online.jpg" alt="" class="cart_online">
+        <p class="para_abt">
+        At our canteen, we're more than just a place to eat; we're a hub of flavors and friendships.
+        We understand the importance of convenience, which is why our online ordering system makes it easy for you to
+        enjoy your favorite canteen delights from the comfort of your dorm or study space. Whether you're seeking a
+        satisfying main course, a refreshing beverage, or even a quick browse through our stationery selection, we've
+        got it all covered.
+      </p>
+
+      </div>
+    </div>
+  </div>
   <!-- Category section starts here -->
   <section id="categorySection">
     <div class="container">
@@ -533,8 +553,8 @@
           </div>
           <br><br>
           <div class="row checkOutRow" id="cart">
-            <button type="button" class="btn knowMoreBtn" data-toggle="modal" data-target="#exampleModal" >
-              <i class="fas fa-shopping-cart" ></i> Go to Cart
+            <button type="button" class="btn knowMoreBtn" data-toggle="modal" data-target="#exampleModal">
+              <i class="fas fa-shopping-cart"></i> Go to Cart
             </button>
           </div>
         </div>
@@ -564,10 +584,10 @@
         <div class="footer-section">
           <h3>Quick Links</h3>
           <ul>
-            <li><a href="#home">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#food">Services</a></li>
-            <li><a href="#food-menu">Menu</a></li>
+            <li><a href="#categories">Categories</a></li>
+            <li><a href="items">Items</a></li>
             <li><a href="#location">Location</a></li>
           </ul>
         </div>
