Added the more content and make the image in center in mobile view.

--- a/cart.html
+++ b/cart.html
@@ -95,14 +95,18 @@
         <hr>
       </h1><br><br>
       <div class="abt_text">
-        <img src="cart_online.jpg" alt="" class="cart_online">
+
         <p class="para_abt">
-        At our canteen, we're more than just a place to eat; we're a hub of flavors and friendships.
-        We understand the importance of convenience, which is why our online ordering system makes it easy for you to
-        enjoy your favorite canteen delights from the comfort of your dorm or study space. Whether you're seeking a
-        satisfying main course, a refreshing beverage, or even a quick browse through our stationery selection, we've
-        got it all covered.
-      </p>
+          At our canteen, we're more than just a place to eat; we're a hub of flavors and friendships. We understand the importance of convenience, which is why our online ordering system makes it easy for you to
+          enjoy your favorite canteen delights from the comfort of your dorm or study space. Our Cart is designed to make your ordering experience seamless, ensuring that you can
+          quickly and effortlessly add your favorite dishes to your cart with just a few clicks. It includes a user-friendly
+          product catalog, a secure and streamlined checkout process, multiple payment options, flexible shipping
+          choices, real-time order tracking, user accounts, robust security measures, automated notifications, clear
+          returns/refunds policies, accessible customer support, mobile responsiveness, promotional integration,
+          inventory management, and a feedback/review system. These features aim to create a seamless and secure online
+          shopping experience, ensuring customer satisfaction from product selection to delivery.
+        </p>
+        <img src="cart_online.jpg" alt="" class="cart_online">
 
       </div>
     </div>
