--- a/index.html
+++ b/index.html
@@ -514,7 +514,8 @@
         </section>
     </div>
     <div class="cart">
-        <a href="./cart.html" class="btn btn-primary" style=" font-size: x-large; font-weight: 600;">Order Online</a>
+        <a href="./cart.html" class="btn btn-primary"
+            style="margin-left: 42%; font-size: x-large; font-weight: 600;">Order Online</a>
     </div><br><br>
 
     <div id="location">
