--- a/cart.html
+++ b/cart.html
@@ -59,22 +59,63 @@
       </div>
       <ul class="menu-items">
         <img src="./resources/Yellow Abstract Cooking Fire Free Logo.png">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#food">Services</a></li>
-        <li><a href="#food-menu">Menu</a></li>
-        <li><a href="#location">Location</a></li>
+        <li>
+          <a href="index.html" class="text">Home</a>
+        </li>
+
+        <li>
+          <a href="#about" class="text">About</a>
+        </li>
+
+        <li>
+          <a href="#categories" class="text">Categories</a>
+        </li>
+
+        <li>
+          <a href="#items" class="text">Items</a>
+        </li>
+
+        <li>
+          <a href="#cart" class="text">Cart</a>
+        </li>
+
+        <li>
+          <a href="#location" class="text">Location</a>
+        </li>
       </ul>
     </div>
     <div class="light_dark">
       <img src="moon-icon.png" alt="" id="icon">
     </div>
   </nav>
+  <div id="abtus">
+    <div class="aboutus">
+      <h1><br>
+        <span><b id="about">ABOUT</b></span>
+        <hr>
+      </h1><br><br>
+      <div class="abt_text">
+
+        <p class="para_abt">
+          At our canteen, we're more than just a place to eat; we're a hub of flavors and friendships. We understand the importance of convenience, which is why our online ordering system makes it easy for you to
+          enjoy your favorite canteen delights from the comfort of your dorm or study space. Our Cart is designed to make your ordering experience seamless, ensuring that you can
+          quickly and effortlessly add your favorite dishes to your cart with just a few clicks. It includes a user-friendly
+          product catalog, a secure and streamlined checkout process, multiple payment options, flexible shipping
+          choices, real-time order tracking, user accounts, robust security measures, automated notifications, clear
+          returns/refunds policies, accessible customer support, mobile responsiveness, promotional integration,
+          inventory management, and a feedback/review system. These features aim to create a seamless and secure online
+          shopping experience, ensuring customer satisfaction from product selection to delivery.
+        </p>
+        <img src="cart_online.jpg" alt="" class="cart_online">
+
+      </div>
+    </div>
+  </div>
   <!-- Category section starts here -->
   <section id="categorySection">
     <div class="container">
       <h1><br>
-        <span><b>CATEGORIES</b></span>
+        <span><b id="categories">CATEGORIES</b></span>
         <hr>
       </h1><br><br>
       <div class="row gutters-40">
@@ -177,7 +218,7 @@
         <div id="momos">
           <div class="row menuHeading">
             <div class="col-12">
-              <h1>Items</h1>
+              <h1 id="items">Items</h1>
               <hr>
             </div>
           </div>
@@ -517,7 +558,7 @@
           <br><br>
           <div class="row checkOutRow">
             <button type="button" class="btn knowMoreBtn" data-toggle="modal" data-target="#exampleModal">
-              <i class="fas fa-shopping-cart"></i> Go to Cart
+              <i class="fas fa-shopping-cart" id="cart"></i> Go to Cart
             </button>
           </div>
         </div>
@@ -547,11 +588,11 @@
         <div class="footer-section">
           <h3>Quick Links</h3>
           <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#food">Services</a></li>
-            <li><a href="#food-menu">Menu</a></li>
-            <li><a href="#location">Location</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#categories">Categories</a></li>
+              <li><a href="items">Items</a></li>
+              <li><a href="#location">Location</a></li>
           </ul>
         </div>
         <div class="footer-section">
