Add Scroll back button in the website

--- a/index.html
+++ b/index.html
@@ -538,7 +538,10 @@
             </form>
         </div>
     </div>
+    <!-- Scroll back Button -->
 
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+    <!-- End of scroll back btton -->
     <footer id="footer">
         <div class="footer-container container">
 
@@ -583,7 +586,7 @@
     </footer>
 
     <!-- .................../ JS Code for smooth scrolling /...................... -->
-
+    <script src="Scrollback.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="Carousel.js"></script>
     <script src="app.js"></script>
