Make scroll up button beautiful

--- a/cart.html
+++ b/cart.html
@@ -581,7 +581,8 @@
   </div>
   <!-- Scroll back Button -->
 
-  <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+  <button onclick="topFunction()" id="myBtn" title="Go to top"><i class='fas fa-arrow-circle-up'
+      style='font-size:36px'></i></button>
   <!-- End of scroll back btton -->
 
   <footer id="footer">
