Update the scroll back button

--- a/cart.html
+++ b/cart.html
@@ -645,6 +645,7 @@
   <!-- CUSTOM JS -->
   <script src="./cart.js"></script>
   <script src="Scrollback.js"></script>
+  <script src="script.js"></script>
 </body>
 
 <!-- BOOTSTRAP JS -->
