Update The About Page

--- a/cart.html
+++ b/cart.html
@@ -84,9 +84,10 @@
       <img src="moon-icon.png" alt="" id="icon">
     </div>
   </nav>
+  <div class="seperator"></div>
   <div id="abtus">
     <div class="aboutus">
-      <h1><br>
+      <h1>
         <span><b id="about">ABOUT</b></span>
         <hr>
       </h1><br><br>
