--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <div class="img-container">
                     <img src="./resources/icecreame.jpg" alt="error" />
                     <div class="img-content">
-                        <a href="#IceCreame" class="btn btn-primary" target="blank">Ice Creame</a>
+                        <a href="#IceCream" class="btn btn-primary" target="blank">Ice Cream</a>
                     </div>
                 </div>
             </div>
@@ -320,7 +320,7 @@
     <div id="IceCreame">
         <section id="food-menu">
 
-            <h2 class="food-menu-heading"><u>Ice Creame</h2>
+            <h2 class="food-menu-heading"><u>Ice Cream</h2>
 
             <div class="food-menu-container container">
                 <div class="food-menu-item">
