Add Animation on scroll in Home page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="./resources/Yellow Abstract Cooking Fire Free Logo.png" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
 <body>
@@ -46,7 +47,7 @@
     </section>
 
     <section id="about">
-        <div class="about-wrapper container">
+        <div class="about-wrapper container" data-aos="slide-up">
             <div class="about-text">
                 <p class="small">About Us</p>
                 <hr>
@@ -69,10 +70,10 @@
     </section>
     <section id="food">
 
-        <h2><u>Types of Services</h2>
+        <h2 data-aos="slide-up"><u>Types of Services</h2>
 
         <div class="slideshow-container">
-            <div class="food-type fruite mySlides fade">
+            <div class="food-type fruite mySlides fade" data-aos="slide-up">
                 <div class="img-container">
                     <img width="1000" src="./resources/stationery.jpg" alt="error" />
                     <div class="img-content">
@@ -81,7 +82,7 @@
                     </div>
                 </div>
             </div>
-            <div class="food-type vegetable mySlides ">
+            <div class="food-type vegetable mySlides " data-aos="slide-up">
                 <div class="img-container">
                     <img src="./resources/printing.jpg" alt="error" />
                     <div class="img-content">
@@ -90,7 +91,7 @@
                     </div>
                 </div>
             </div>
-            <div class="food-type grin mySlides">
+            <div class="food-type grin mySlides" data-aos="slide-up">
                 <div class="img-container">
                     <img src="./resources/maincourse.jpg" alt="error" />
                     <div class="img-content">
@@ -100,7 +101,7 @@
                     </div>
                 </div>
             </div>
-            <div class="food-type vegetable mySlides">
+            <div class="food-type vegetable mySlides" data-aos="slide-up">
                 <div class="img-container">
                     <img src="./resources/beverages.jpg" alt="error" />
                     <div class="img-content">
@@ -109,7 +110,7 @@
                     </div>
                 </div>
             </div>
-            <div class="food-type vegetable mySlides">
+            <div class="food-type vegetable mySlides" data-aos="slide-up">
                 <div class="img-container">
                     <img src="./resources/icecreame.jpg" alt="error" />
                     <div class="img-content">
@@ -137,7 +138,7 @@
             <h2 class="food-menu-heading"><u>Main Course</h2>
 
             <div class="food-menu-container container">
-                <div class="food-menu-item">
+                <div class="food-menu-item" data-aos="slide-up">
 
                     <img src="./resources/sandwich.jpeg" alt="" />
 
@@ -148,7 +149,7 @@
                     </div>
                 </div>
 
-                <div class="food-menu-item">
+                <div class="food-menu-item" data-aos="slide-up">
 
                     <img src="./resources/vegsand.jpeg" alt="error" />
 
@@ -159,7 +160,7 @@
                         <hr>
                     </div>
                 </div>
-                <div class="food-menu-item">
+                <div class="food-menu-item" data-aos="slide-up">
 
                     <img src="./resources/chow.jpeg" alt="" />
 
@@ -170,7 +171,7 @@
                         <hr>
                     </div>
                 </div>
-                <div class="food-menu-item">
+                <div class="food-menu-item" data-aos="slide-up">
 
                     <img src="./resources/fried.jpeg" alt="" />
 
@@ -181,7 +182,7 @@
                         <hr>
                     </div>
                 </div>
-                <div class="food-menu-item">
+                <div class="food-menu-item" data-aos="slide-up">
 
                     <img src="./resources/chic65.jpeg" alt="" />
 
@@ -192,7 +193,7 @@
                         <hr>
                     </div>
                 </div>
-                <div class="food-menu-item">
+                <div class="food-menu-item" data-aos="slide-up">
 
                     <img src="./resources/biryani.jpeg" alt="" />
 
@@ -214,7 +215,7 @@
             <h2 class="food-menu-heading"><u>Beverages</h2>
 
             <div class="food-menu-container container">
-                <div class="food-menu-item">
+                <div class="food-menu-item" data-aos="slide-up">
 
                     <img src="./resources/tea.jpeg" alt="" />
 
@@ -226,7 +227,7 @@
                     </div>
                 </div>
 
-                <div class="food-menu-item">
+                <div class="food-menu-item" data-aos="slide-up">
 
                     <img src="./resources/coffee.jpeg" alt="error" />
 
@@ -237,7 +238,7 @@
                         <hr>
                     </div>
                 </div>
-                <div class="food-menu-item">
+                <div class="food-menu-item" data-aos="slide-up">
 
                     <img src="./resources/chocolates.jpeg" alt="" />
 
@@ -248,7 +249,7 @@
                         <hr>
                     </div>
                 </div>
-                <div class="food-menu-item">
+                <div class="food-menu-item" data-aos="slide-up">
 
                     <img src="./resources/cakes.jpeg" alt="" />
 
@@ -259,7 +260,7 @@
                         <hr>
                     </div>
                 </div>
-                <div class="food-menu-item">
+                <div class="food-menu-item" data-aos="slide-up">
 
                     <img src="./resources/drinks.jpeg" alt="" />
 
@@ -270,7 +271,7 @@
                         <hr>
                     </div>
                 </div>
-                <div class="food-menu-item">
+                <div class="food-menu-item" data-aos="slide-up">
 
                     <img src="./resources/cup.jpeg" alt="" />
 
@@ -289,7 +290,7 @@
 
             <h2 class="food-menu-heading"><u>Printing</h2>
 
-            <div class="food-menu-container container">
+            <div class="food-menu-container container" data-aos="slide-up">
                 <div class="food-menu-item">
 
                     <img src="./resources/print.jpeg" alt="" />
@@ -302,7 +303,7 @@
                     </div>
                 </div>
 
-                <div class="food-menu-item">
+                <div class="food-menu-item" data-aos="slide-up" data-aos="slide-up">
 
                     <img src="./resources/xerox.jpeg" alt="error" />
 
@@ -323,7 +324,7 @@
             <h2 class="food-menu-heading"><u>Ice Cream</h2>
 
             <div class="food-menu-container container">
-                <div class="food-menu-item">
+                <div class="food-menu-item" data-aos="slide-up">
 
                     <img src="./resources/junior.jpeg" alt="" />
 
@@ -334,7 +335,7 @@
                         <hr>
                     </div>
                 </div>
-                <div class="food-menu-item">
+                <div class="food-menu-item" data-aos="slide-up">
 
                     <img src="./resources/feast.jpeg" alt="error" />
 
@@ -345,7 +346,7 @@
                         <hr>
                     </div>
                 </div>
-                <div class="food-menu-item">
+                <div class="food-menu-item" data-aos="slide-up">
 
                     <img src="./resources/forest.jpeg" alt="error" />
 
@@ -356,7 +357,7 @@
                         <hr>
                     </div>
                 </div>
-                <div class="food-menu-item">
+                <div class="food-menu-item" data-aos="slide-up">
 
                     <img src="./resources/senior.jpeg" alt="error" />
 
@@ -367,7 +368,7 @@
                         <hr>
                     </div>
                 </div>
-                <div class="food-menu-item">
+                <div class="food-menu-item" data-aos="slide-up">
 
                     <img src="./resources/cola.jpeg" alt="error" />
 
@@ -378,7 +379,7 @@
                         <hr>
                     </div>
                 </div>
-                <div class="food-menu-item">
+                <div class="food-menu-item" data-aos="slide-up">
 
                     <img src="./resources/crunchy.jpeg" alt="error" />
 
@@ -389,7 +390,7 @@
                         <hr>
                     </div>
                 </div>
-                <div class="food-menu-item">
+                <div class="food-menu-item" data-aos="slide-up">
 
                     <img src="./resources/butter.jpeg" alt="" />
 
@@ -400,7 +401,7 @@
                         <hr>
                     </div>
                 </div>
-                <div class="food-menu-item">
+                <div class="food-menu-item" data-aos="slide-up">
 
                     <img src="./resources/vanilla.jpeg" alt="" />
 
@@ -411,7 +412,7 @@
                         <hr>
                     </div>
                 </div>
-                <div class="food-menu-item">
+                <div class="food-menu-item" data-aos="slide-up">
 
                     <img src="./resources/double.jpeg" alt="" />
 
@@ -422,7 +423,7 @@
                         <hr>
                     </div>
                 </div>
-                <div class="food-menu-item">
+                <div class="food-menu-item" data-aos="slide-up">
 
                     <img src="./resources/caramel.jpeg" alt="" />
 
@@ -447,7 +448,7 @@
 
                     <img src="./resources/channelfile.jpeg" alt="" />
 
-                    <div class="food-description">
+                    <div class="food-description" data-aos="slide-up">
                         <h2 class="food-titile">Channel File</h2>
 
                         <p class="food-price">Price: &#8377; 20</p>
@@ -455,7 +456,7 @@
                     </div>
                 </div>
 
-                <div class="food-menu-item">
+                <div class="food-menu-item" data-aos="slide-up">
 
                     <img src="./resources/fevistick.jpeg" alt="error" />
 
@@ -466,7 +467,7 @@
                         <hr>
                     </div>
                 </div>
-                <div class="food-menu-item">
+                <div class="food-menu-item" data-aos="slide-up">
 
                     <img src="./resources/bandaid.jpeg" alt="" />
 
@@ -477,7 +478,7 @@
                         <hr>
                     </div>
                 </div>
-                <div class="food-menu-item">
+                <div class="food-menu-item" data-aos="slide-up">
 
                     <img src="./resources/pen.jpeg" alt="" />
 
@@ -488,7 +489,7 @@
                         <hr>
                     </div>
                 </div>
-                <div class="food-menu-item">
+                <div class="food-menu-item" data-aos="slide-up">
 
                     <img src="./resources/mask.jpeg" alt="" />
 
@@ -499,7 +500,7 @@
                         <hr>
                     </div>
                 </div>
-                <div class="food-menu-item">
+                <div class="food-menu-item" data-aos="slide-up">
 
                     <img src="./resources/pencil.jpeg" alt="" />
 
@@ -513,11 +514,11 @@
             </div>
         </section>
     </div>
-    <div class="cart">
+    <div class="cart" data-aos="slide-up">
         <a href="./cart.html" class="btn btn-primary" style=" font-size: x-large; font-weight: 600;">Order Online</a>
     </div><br><br>
 
-    <div id="location">
+    <div id="location" data-aos="slide-up">
         <div class="location-map">
             <h2 class="food-menu-heading"><u id="locate">Location</h2>
 
@@ -528,7 +529,7 @@
                 width="350" height="280" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-        <div class="location-contact">
+        <div class="location-contact" data-aos="slide-up">
             <form onsubmit="return validateForm()" action="https://formsubmit.co/shinjansaha02@gmail.com" method="POST">
                 <input type=" text" class="name1" placeholder="Your Name" id="name" name="name" required>
                 <p id="errormsg1" class="errormsg"></p>
@@ -596,6 +597,13 @@
     <script src="Carousel.js"></script>
     <script src="app.js"></script>
     <script src="script.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            offset: 300, // offset (in px) from the original trigger point
+            duration: 1000,
+        });
+    </script>
 
 </html>
 
